updated HTML DOC to reflect Added Items

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>To Do List App</h1>
+    <form>
+        <p>
+            <label for="text">text</label>
+            <input type="text" name="text">
+        </p>
+        <p>
+            <button id="addItem"> Add Item </button>
+        </p>
+    </form>
+    <ul id="items"></ul>
+    <script src="./app.js"></script>
 </body>
 </html>
