--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         </p>
     </form>
     <ul id="items"></ul>
+    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
